info to contact

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="mailto:info@devhead.net">
+                <a href="mailto:contact@devhead.net">
                   <i class="fa fa-envelope"></i>
                 </a>
               </li>
