make all images https (secure)

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         <script src="https://assistant-chat-eu-gb.watsonplatform.net/web/chat/ibm.chat.0.0.4.js"></script>
         <script>
           const config = {
-            bot_image: 'http://devhead.net/img/team/4.jpg',
+            bot_image: 'https://devhead.net/img/team/4.jpg',
             bot_name: 'Chat',
             debug: true,
             element: document.querySelector('.Chat__body'),
