--- a/index.html
+++ b/index.html
@@ -469,11 +469,11 @@
             }
           }).then(function (instance) {
             window.instance = instance;
-            removeLoader();
+            //removeLoader();
             instance.render();
           }).catch(function (error) {
             console.error('An error occurred while attempting to create the widget.', error)
-            scriptLoadError();
+            //scriptLoadError();
           });
         </script>
       </div>
@@ -567,7 +567,7 @@
       </div>
     </div>
 
-    <!-- Modal 2 -->
+    <!-- Modal 2 --
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
@@ -580,7 +580,7 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <!-- Project Details Go Here -->
+                  <!-- Project Details Go Here --
                   <h2 class="text-uppercase">Project Name</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/02-full.jpg" alt="">
@@ -599,7 +599,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <!-- Modal 3 
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
