--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="DevHead Studios - Web Developers">
     <meta name="author" content="Harvey">
 
-    <title>Dev Head - Website Development Studio</title>
+    <title>DevHead - Website Development Studio</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -135,12 +135,26 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 col-sm-12 portfolio-item">
+          <div class="col-md-6 col-sm-12 portfolio-item">
             <div class="portfolio-caption">
               <h4>Market House</h4>
               <p class="text-muted">Bar/Club</p>
             </div>
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-thumbnail" src="img/portfolio/markethouse.png" alt="">
+            </a>
+          </div>
+          <div class="col-md-6 col-sm-12 portfolio-item">
+            <div class="portfolio-caption">
+              <h4>The London Finance Journal</h4>
+              <p class="text-muted">Financial Reporting</p>
+            </div>
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fas fa-plus fa-3x"></i>
