--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="row">
           <div class="col-md-6 col-sm-12 portfolio-item">
             <div class="portfolio-caption">
-              <h4>Market House</h4>
+              <h4>Market House</h4><br>
               <p class="text-muted">Bar/Club</p>
             </div>
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
@@ -152,7 +152,7 @@
           <div class="col-md-6 col-sm-12 portfolio-item">
             <div class="portfolio-caption">
               <h4>The London Finance Journal</h4>
-              <p class="text-muted">Financial Reporting</p>
+              <p class="text-muted">Economics & Finance Reporting</p>
             </div>
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
               <div class="portfolio-hover">
@@ -160,7 +160,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-thumbnail" src="img/portfolio/markethouse.png" alt="">
+              <img class="img-thumbnail" src="img/portfolio/thelfj.png" alt="">
             </a>
           </div>
           <!--<div class="col-md-4 col-sm-6 portfolio-item">
@@ -568,6 +568,40 @@
                   <ul class="list-inline">
                     <li>Date: January 2019</li>
                     <li>Client: Market House Brixton</li>
+                    <li>Category: Website Development</li>
+                  </ul>
+                  <button class="btn btn-primary" data-dismiss="modal" type="button">
+                    <i class="fas fa-times"></i>
+                    Close Project</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="close-modal" data-dismiss="modal">
+            <div class="lr">
+              <div class="rl"></div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-8 mx-auto">
+                <div class="modal-body">
+                  <!-- Project Details Go Here -->
+                  <h2 class="text-uppercase">The London Finance Journal</h2>
+                  <p class="item-intro text-muted">Economics & Finance Reporting</p>
+                  <a href="https://thelfj.co.uk" target="_blank">
+                    <img class="img-fluid d-block mx-auto" src="img/portfolio/thelfj-full.png" alt="">
+                  </a>
+                  <!--p>We programmed and designed this website on request.</p-->
+                  <ul class="list-inline">
+                    <li>Date: June 2020</li>
+                    <!--li>Client: Market House Brixton</li-->
                     <li>Category: Website Development</li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
